Changed swagger and recreated flask server
