# python-flask-server/swagger_server/controllers/missions_controller.py
@@ -4,8 +4,7 @@ import six
 from swagger_server.models.endpoints import Endpoints  # noqa: E501
 from swagger_server.models.filelist import Filelist  # noqa: E501
 from swagger_server.models.missions import Missions  # noqa: E501
-from swagger_server import util, missions_readable, missions_true
-import os
+from swagger_server import util
 
 
 def get_home_naif():  # noqa: E501
@@ -16,14 +15,7 @@ def get_home_naif():  # noqa: E501
 
     :rtype: List[Missions]
     """
-    human_read = []
-
-    for miss in os.listdir('/spicedata/'):
-        if miss[0] == '.':
-            continue
-        else:
-            human_read.append(miss)
-    return human_read
+    return 'do some magic!'
 
 
 def get_misc(mission):  # noqa: E501
@@ -31,7 +23,7 @@ def get_misc(mission):  # noqa: E501
 
      # noqa: E501
 
-    :param mission:
+    :param mission: 
     :type mission: str
 
     :rtype: List[Filelist]
@@ -44,13 +36,12 @@ def get_mission_endpoints(mission):  # noqa: E501
 
      # noqa: E501
 
-    :param mission:
+    :param mission: 
     :type mission: str
 
     :rtype: List[Endpoints]
     """
-    endpoints = ['/kernels', '/misc', '/metakernels']
-    return endpoints
+    return 'do some magic!'
 
 
 def get_missions():  # noqa: E501
@@ -61,10 +52,4 @@ def get_missions():  # noqa: E501
 
     :rtype: List[Missions]
     """
-    human_read = []
-    for miss in os.listdir('/spicedata/'):
-        if miss[0] == '.':
-            continue
-        else:
-            human_read.append(missions_readable[miss])
-    return human_read
+    return 'do some magic!'
